Position of sticky btn, gallery scroll bug, overflow bug, formules font size and alignement

--- a/assets/css/header.less
+++ b/assets/css/header.less
@@ -7,6 +7,7 @@ header{
     z-index: 1;
     background: transparent;
     padding: 0;
+    width: 100vw;
 
     .navbar-brand {
       @media screen and (min-width:992px) {
@@ -26,6 +27,7 @@ header{
         background: rgba(0, 0, 0, 0.2);
         border-radius: 100px;
         padding: 10px 20px 10px;
+        margin-right: 10px;
         max-width: fit-content;
         transition: background 0.6s ease-in-out;
       }
