--- a/assets/css/portfolio.less
+++ b/assets/css/portfolio.less
@@ -62,7 +62,11 @@ section#formules-videos{
      font-size: 14px;
     }
     .prestation-item{
-     font-size: 13px;
+     font-size: 12px;
+     text-align: left;
+     @media screen and (min-width:1200px) {
+      font-size: 13px;
+     }
     }
    }
   }   
@@ -106,7 +110,11 @@ section#formules-photos{
      font-size: 14px;
     }
     .prestation-item{
-     font-size: 13px;
+     font-size: 12px;
+     text-align: left;
+     @media screen and (min-width:1200px) {
+      font-size: 13px;
+     }
     }
    }
   }   
