--- a/assets/css/sticky-btn.less
+++ b/assets/css/sticky-btn.less
@@ -1,6 +1,6 @@
 .sticky-btn{
  position: fixed;
- bottom: 20px;
+ bottom: 30px;
  left: 20px;
  z-index: 100;
  img{
