--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -130,7 +130,7 @@ body{
   h2{
     font-family: 'Lemon', sans-serif;
     color: @pink;
-    font-size: 36px;
+    font-size: 30px;
     @media screen and (min-width: 992px) {
       font-size: 46px;
     }
